--- a/client/src/views/discovery.css
+++ b/client/src/views/discovery.css
@@ -1,3 +1,8 @@
+.discovery {
+  min-height: 100vh;
+  background-color: #171717;
+}
+
 .discovery__container {
   max-width: 70%;
   margin: 0 auto;
