--- a/client/src/components/itemCard.css
+++ b/client/src/components/itemCard.css
@@ -16,3 +16,12 @@
   font-size: 20px;
   font-weight: 400;
 }
+
+/* .content__card {
+
+} */
+
+.card-text:last-child {
+  margin-bottom: 0;
+  text-align: justify;
+}
