--- a/client/src/views/profile.css
+++ b/client/src/views/profile.css
@@ -62,6 +62,9 @@
 .items__container{
   /* background-color: red; */
   padding-top: 30px;
+  overflow: scroll;
+  width: 100vh;
+  height: 40em
 }
 
 .items__images{
@@ -74,8 +77,8 @@
 }
 
 .see__all{
-  position: absolute;
-  left: 85%;
+  position: relative;
+  left: 75%;
   text-decoration: none;
   color: black;
   font-size: 20px;
