--- a/client/src/components/itemCard.css
+++ b/client/src/components/itemCard.css
@@ -1,5 +1,6 @@
 .card__item {
   padding: 0.5rem;
+  height: 100%;
 }
 
 .card-body {
@@ -13,6 +14,7 @@
 
 .card {
   cursor: pointer;
+  height: 100%;
 }
 
 .card-body .item {
