--- a/client/src/views/profile.css
+++ b/client/src/views/profile.css
@@ -64,50 +64,37 @@
   left: 5em;
 }
 
-/* .main__content{
-  position: relative;
-  left: 20px
-} */
-
+.items__container {
+  padding-top: 30px;
+}
 .items__images {
   display: flex;
   flex-direction: row;
-  background-color: #191919;
+  /* background-color: #191919; */
   border-radius: 5px;
 }
-.items__container {
-  /* background-color: red; */
-  padding-top: 30px;
-  display: grid;
-}
 
-.items__images {
-  display: grid;
+.items__image {
   /* background-color: crimson; */
+  display: grid;
   grid-template-columns: auto auto auto;
   grid-template-rows: auto auto auto;
   padding: 0.5rem;
-  color: #eee;
+  /* color: #eee; */
 }
-
 .item__image {
-  width: 200px;
-  margin: auto;
-}
-
-.item__image {
-  width: 300px;
-  /* padding: 1vh; */
-  /* background-color: #333; */
+  width: 35vh;
   box-shadow: 10px 10px 5px #687980;
   margin-top: 25px;
-  border-radius: 20px;
-  transition: transform 0.5s;
+  border-radius: 10px;
+  transition: transform 0.3s;
 }
 
 .item__image:hover {
   transform: scale(1.1);
   cursor: pointer;
+  opacity: 0.9;
+  
 }
 
 .see__all {
