--- a/client/src/components/lastMessage.css
+++ b/client/src/components/lastMessage.css
@@ -1,14 +1,61 @@
 .history-chat {
-  width: 80%
+  background-color: whitesmoke;
+  padding: 1em;
+  width: 80%;
+  display: flex;
+  align-items: center;
+  margin-bottom: 1em;
+  transition: all 0.5s;
+  cursor: pointer
+}
+
+.history-chat:hover {
+  background-color:gainsboro
+}
+
+.contact-picture {
+  background-color: white;
+  border-radius: 50%;
+  border: solid gray 2px;
+  display: flex;
+  align-items: center;
+  height: 70px;
+  width: 70px;
+  min-height: 70px;
+  min-width: 70px;
+  overflow: hidden;
+  margin-right: 1em;
+}
+
+.contact-picture img {
+  object-fit: cover;
+  min-width: 100%;
+  min-height: 100%
 }
 
 .username {
   font-weight: bold;
+  font-size: 1.15em;
   color:black;
+}
+
+.header-chatbox {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%
 }
 
 .chatbox {
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+
+.history-content {
+  width: 100%
+}
+
+.channel-chat {
+  color: rgb(80,80,80)
 }
