--- a/client/src/views/profile.css
+++ b/client/src/views/profile.css
@@ -37,7 +37,7 @@ body {
   left: 36%;
   border-radius: 50%;
   /* background-color: red; */
-  background-image: url('https://www.mugi.co.id/assets/images/img_def.png');
+  background-image: url("https://www.mugi.co.id/assets/images/img_def.png");
   background-size: cover;
   background-repeat: no-repeat;
   padding: 8px;
@@ -49,21 +49,14 @@ body {
 }
 
 .text {
-  font-size: 28px;
+  /* font-size: 28px; */
 }
 .text p {
   color: #fffafa;
 }
 
 .btn__chat {
-  height: 55px;
-  width: 150px;
-  /* justify-self:center */
-  border-radius: 20px;
-  font-size: 20px;
-  font-weight: 400;
-  position: relative;
-  left: 5em;
+  display: block;
 }
 
 .items__container {
@@ -100,7 +93,7 @@ body {
 }
 
 .item__image:hover {
-  transform: scale(1.1);
+  transform: scale(1.03);
   cursor: pointer;
   opacity: 0.9;
 }
