--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,7 +9,7 @@ body {
   font-family: "Noto Sans JP", sans-serif;
   line-height: 1.6;
   font-weight: 400;
-  background-color: #171717;
+  background-color: #a5e1ad;
 }
 
 .modal-footer {
