--- a/client/src/views/profile.css
+++ b/client/src/views/profile.css
@@ -9,8 +9,8 @@
   --bs-gutter-x: 0;
 }
 
-body {
-  background-color: #171717 !important;
+.profile {
+  background-color: #a5e1ad;
 }
 
 .user__info__container {
@@ -63,7 +63,7 @@ body {
 .items__show__container {
   display: flex;
   flex-direction: row;
-  background-color: #282828;
+  background-color: #1eae98;
   border-radius: 5px;
   color: #eee;
 }
