--- a/client/src/views/wishlist.css
+++ b/client/src/views/wishlist.css
@@ -7,7 +7,7 @@
 
 .rowImg{
     margin-top: 90px;
-    background-color:red;
+    /* background-color:red; */
     padding: 20px;
     display:grid;
 }
