--- a/client/src/views/seeAll.css
+++ b/client/src/views/seeAll.css
@@ -1,6 +1,6 @@
 .discovery {
   min-height: 100vh;
-  background-color: #171717;
+  background-color: #FFFFFF;
 }
 
 .discovery__container {
@@ -14,7 +14,7 @@
 
 .loading__discovery {
   min-height: 100vh;
-  background-color: #171717;
+  background-color: #FFFFFF;
   padding: 20rem;
 }
 
