--- a/client/src/views/chat.css
+++ b/client/src/views/chat.css
@@ -37,23 +37,25 @@
 }
 
 .main__chat{
-    background-color: aliceblue;
-    padding: 20px
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: whitesmoke;
+    padding: 0.5em
 }  
 
 .box__chat{
     background-color: #eee;
-    height: 80vh;
+    height: 70vh;
     width: 120vh;
     padding: 20px;
     /* position: relative; */
     margin-top: 4vh;
-    overflow: scroll;
+    overflow: auto;
     /* top: 18vh; */
 }
 
 .box__sent{
-    margin: 0.25em;
     width: 100%;
     /* height:10vh; */
 
@@ -67,16 +69,16 @@
 }
 
 .text__handle{
-    padding: 10px;
-    width: 60%;
+    padding: 5px;
+    width: 65%;
     display: flex;
-    /* margin : 2px */
+    border-radius: 5px;
 }
 
 .text__chat{
     word-break: break-all;
     font-size: 20px;
-    padding: 10px;
+    padding: 5px;
     color: black
 }
 .person__name{
