--- a/client/src/views/discovery.css
+++ b/client/src/views/discovery.css
@@ -1,6 +1,6 @@
 .discovery {
   min-height: 100vh;
-  background-color: #a5e1ad;
+  background-color: #f8f1f1;
 }
 
 .discovery__container {
@@ -14,7 +14,7 @@
 
 .loading__discovery {
   min-height: 100vh;
-  background-color: #171717;
+  background-color: #a3d2ca;
   padding: 20rem;
 }
 
