--- a/client/src/views/profile.css
+++ b/client/src/views/profile.css
@@ -10,7 +10,7 @@
 }
 
 .profile {
-  background-color: #a5e1ad;
+  background-color: #f8f1f1;
 }
 
 .user__info__container {
@@ -46,13 +46,9 @@
   text-align: center;
 }
 
-.text {
-  /* font-size: 28px; */
-}
 .text p {
-  color: #fffafa;
+  color: #346d63;
 }
-
 .btn__chat {
   display: block;
 }
@@ -63,7 +59,7 @@
 .items__show__container {
   display: flex;
   flex-direction: row;
-  background-color: #1eae98;
+  background-color: #a3d2ca;
   border-radius: 5px;
   color: #eee;
 }
