--- a/client/src/components/lastMessage.css
+++ b/client/src/components/lastMessage.css
@@ -10,7 +10,7 @@
 }
 
 .history-chat:hover {
-  background-color:gainsboro
+  background-color: #a3d2ca
 }
 
 .contact-picture {
@@ -19,10 +19,10 @@
   border: solid gray 2px;
   display: flex;
   align-items: center;
-  height: 70px;
-  width: 70px;
-  min-height: 70px;
-  min-width: 70px;
+  height: 75px;
+  width: 75px;
+  min-height: 75px;
+  min-width: 75px;
   overflow: hidden;
   margin-right: 1em;
 }
@@ -36,7 +36,7 @@
 .username {
   font-weight: bold;
   font-size: 1.15em;
-  color:black;
+  color:#db6400;
 }
 
 .header-chatbox {
@@ -57,5 +57,5 @@
 }
 
 .channel-chat {
-  color: rgb(80,80,80)
+  color: rgb(85,85,85)
 }
