--- a/client/src/components/navbar.css
+++ b/client/src/components/navbar.css
@@ -1,8 +1,11 @@
-.background-nav{
+/* .background-nav{
     background-color:rgb(46, 81, 162)
 }
+*/
+.navText {
+  font-size: 20px;
+}
 
-.navText{
-    font-size: 20px;
-    font-weight: bold;
+.hot {
+  padding-right: 1px !important;
 }
