--- a/client/src/views/login.css
+++ b/client/src/views/login.css
@@ -1,3 +1,22 @@
 #bg_login {
   background-image: url(".././images/denise-jans-uIemlFWQSC4-unsplash.jpg");
 }
+
+.descApp{
+  /* position: fixed; */
+  /* top: 8vh; */
+  padding-bottom: 1em;
+  font-size: 34px;
+  font-weight: 600;
+  color: #FF834A;
+  letter-spacing:3px;
+  
+}
+
+.logo{
+  width: 120px;
+  display: inline;
+  /* justify-content: center; */
+  /* align-items: center; */
+  /* align-self: center; */
+}
