--- a/client/src/views/seeAll.css
+++ b/client/src/views/seeAll.css
@@ -22,3 +22,13 @@
   display: block;
   color: #f8f1f1;
 }
+
+.return-button {
+  margin: 0 auto;
+  font-size: 1.2em;
+}
+
+.showcase-header {
+  display: flex;
+  flex-direction: column;
+}
